--- a/pom.xml
+++ b/pom.xml
@@ -4,8 +4,8 @@
     <artifactId>junior</artifactId>
     <packaging>pom</packaging>
     <version>2.0</version>
-     <name>junior</name>
-     <url>http://job4j.ru/</url>
+    <name>junior</name>
+    <url>http://job4j.ru/</url>
 
     <properties>
        <maven.compiler.source>1.8</maven.compiler.source>
@@ -31,5 +31,32 @@
 			<scope>test</scope>
 		</dependency>
 	</dependencies>
+
+    <build>
+	<plugins>
+	    <plugin>
+		<groupId>org.apache.maven.plugins</groupId>
+		<artifactId>maven-checkstyle-plugin</artifactId>
+		<version>2.17</version>
+		    <executions>
+			<execution>
+			    <id>validate</id>
+			    <phase>validate</phase>
+				<configuration>
+				    <configLocation>checkstyle.xml</configLocation>
+				    <encoding>UTF-8</encoding>
+				    <consoleOutput>true</consoleOutput>
+				    <failsOnError>true</failsOnError>
+				    <includeTestSourceDirectory>true</includeTestSourceDirectory>
+				</configuration>
+			    <goals>
+				<goal>check</goal>
+			    </goals>
+			</execution>
+		</executions>
+	    </plugin>
+	</plugins>
+    </build> 
+
 
 </project>
