--- a/pom.xml
+++ b/pom.xml
@@ -18,6 +18,7 @@
         <module>chapter_002</module>
         <module>chapter_003</module>
         <module>chapter_101</module>
+        <module>chapter_102</module>
     </modules>
 
 	<dependencies>
