Создать web проект

--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,7 @@
         <module>chapter_101</module>
         <module>chapter_102</module>
         <module>chapter_103</module>
+		<module>chapter_104</module>
     </modules>
 
 	<dependencies>
