Произвести автоматическое тестирование всех сервлетов
liquibase

--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,20 @@ language: java
 # используем режим обычного пользователя для сборки проекта.
 sudo: false
 
+services:
+  - postgresql
+
+postgres:
+  adapter: postgresql
+  database: users
+  username: postgres
+  password: postgres
+
+before_script:
+  - psql -c "create schema public;" -U postgres
+  - psql -c 'create database users;' -U postgres
+  - rake db:migrate
+
 # после выполнения сборки запустить скрипт, который будет собирать статистику по JaCoCo
 # Здесь используется сторонни сервис https://codecov.io/
 after_success:
@@ -14,4 +28,4 @@ notifications:
     recipients:
       - shonorov@gmail.com
     on_success: never # default: change
-    on_failure: always # default: always
+    on_failure: never # default: always
