--- a/.travis.yml
+++ b/.travis.yml
@@ -12,6 +12,7 @@ services:
 before_script:
 #  - psql -c 'create schema public;' -U postgres
   - psql -c 'create database travis_ci_test;' -U postgres
+  - psql -c 'create database users;' -U postgres
 #  - rake db:migrate
 
 # после выполнения сборки запустить скрипт, который будет собирать статистику по JaCoCo
