--- a/pom.xml
+++ b/pom.xml
@@ -21,6 +21,7 @@
         <module>chapter_102</module>
         <module>chapter_103</module>
 		<module>chapter_104</module>
+        <module>chapter_104a</module>
     </modules>
 
 	<dependencies>
