--- a/pom.xml
+++ b/pom.xml
@@ -22,6 +22,7 @@
         <module>chapter_103</module>
 		<module>chapter_104</module>
         <module>chapter_104a</module>
+        <module>chapter_201</module>
     </modules>
 
 	<dependencies>
