--- a/pom.xml
+++ b/pom.xml
@@ -25,6 +25,7 @@
         <module>chapter_201</module>
         <module>chapter_201a</module>
 		<module>chapter_202</module>
+        <module>chapter_202a</module>
     </modules>
 
 	<dependencies>
