--- a/pom.xml
+++ b/pom.xml
@@ -27,6 +27,7 @@
 		<module>chapter_202</module>
         <module>chapter_202a</module>
 		<module>chapter_202b</module>
+        <module>chapter_202c</module>
     </modules>
 
 	<dependencies>
