1. Проверить байтовый поток

--- a/pom.xml
+++ b/pom.xml
@@ -28,6 +28,7 @@
         <module>chapter_202a</module>
 		<module>chapter_202b</module>
         <module>chapter_202c</module>
+        <module>chapter_203</module>
     </modules>
 
 	<dependencies>
